--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
   </div>
 
-  <script type="text/javascript" src=""></script>
+  <script type="text/javascript" src="script.js"></script>
 
 </body>
 
